Changes with Apache 1.3.20
  *) Fix ndbm.h include problems with various Linux distributions and 
     brain-dead glibc >= 2.1, which sometimes have ndbm.h in a
     non-standard db1/ subdir. PR#6929
     [Victor J. Orlikowski]

  *) Empty headers are allowed by RFC2068 section 4.2.  The presence or
     absence of an empty header can be significant.  The current mod_proxy
     of httpd 1.3.x removes empty headers. Change mod_proxy to preserve
     empty headers. [Christian von Roques <roques@mti.ag>]

  *) Enhance rotatelogs so that a UTC offset can be specified, and
     the logfile name can be formatted using strftime(3).  [Ken Coar]

  *) Fix a possible NULL pointer dereference in the detection of the
     default ServerName or IP string (introduced in 1.3.18).
     [Ignasi Roca, <Ignasi.Roca@fujitsu-siemens.com>]

  *) Make EBCDIC conversion fully configurable. Until now, apache relied
     on some (incomplete) heuristics, and would fail to correctly serve
     text files when they had a MIME type of application/anything, like
     application/x-javascript. The new conversion directives allow
     defining the conversion based on MIME type or file suffix.
     [Martin Kraemer]

  *) Add a -V flag to suexec, which causes it to display the
     compile-time settings with which it was built.  (Only
     usable by root or the HTTPD_USER username.)  [Ken Coar]

  *) Set the Win32 service description in the Services control panel to 
     the server_version string from Apache and the loaded modules.
     [William Rowe]

  *) Added a new API for NetWare, ap_os_dso_unsym(), to allow Apache the 
     chance to unimport module symbols before it shuts down.  This is 
     necessary so that Apache on NetWare can shutdown cleanly in an error
     condition such as a failure while reading the httpd.conf file.
     [Brad Nicholes <BNICHOLES@novell.com>]

  *) Introduce NUL device pipes for stdin and stdout for the parent Win32